# zephyr_testrepo

./: CMakeLists.txt  Kconfig  prj.conf
boards/arm/nrf52840_dummy/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52840_dummy.dts  nrf52840_dummy_defconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/dummyaccel/: CMakeLists.txt  Kconfig  dummyaccel.c
dts/bindings/sensor/: zephyr,dummyaccel.yaml
src/: main.c
